--- a/WebApplication1/Areas/coadmin/Views/documentos/editar.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/documentos/editar.cshtml
@@ -20,6 +20,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
+                            <li class="breadcrumb-item"><a href="@Url.Action("listado", "documentos", new { area = "coadmin" })" class="text-success"> Documentos</a></li>
                             <li class="breadcrumb-item active">Editar documento</li>
                         </ul>
                     </div>
@@ -30,7 +31,7 @@
         <!-- back button -->
         <div class="row pb-4">
             <div class="col-md-6">
-                <a href="javascript:history.back()"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
+                <a href="@Url.Action("listado", "documentos", new { area = "coadmin" })"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
             </div>
         </div>
         <!-- end back button -->
@@ -69,7 +70,7 @@
                                     <input maxlength="30" class="form-control" type="text" value="@Model.editDocument.first_name"
                                            name="first_name" required data-toggle="tooltip" title="Nombre descriptivo del documento"
                                            placeholder="Documento 1" id="example-email-input">
-                                    <small class="form-text text-muted">Nombre descriptivo del documento</small>
+                                    @*<small class="form-text text-muted">Nombre descriptivo del documento</small>*@
                                 </div>
                             </div>
                             <div class="form-divider"></div>
@@ -91,7 +92,7 @@
                                             }
                                         }
                                     </select>
-                                    <small class="form-text text-muted">Categoría del documento</small>
+                                    @*<small class="form-text text-muted">Categoría del documento</small>*@
                                 </div>
                             </div>
                             <div class="form-divider"></div>
@@ -133,7 +134,7 @@
                                     <input maxlength="40" required class="form-control" type="email" value="@Model.editDocument.uploaded_by" name="uploaded_by"
                                            data-toggle="tooltip" title="Nombre de quien sube el documento"
                                            placeholder="Daniel González" id="example-lastname1-input">
-                                    <small class="form-text text-muted">Nombre de quien sube el documento</small>
+                                    @*<small class="form-text text-muted">Correo electrónico de quien sube el documento</small>*@
                                 </div>
                             </div>
                             <div class="form-divider"></div>
@@ -143,7 +144,7 @@
                                     <input class="form-control" autocomplete="off" type="date" value="@Convert.ToDateTime(Model.editDocument.uploaded_date).ToString("yyyy-MM-dd")"
                                            data-toggle="tooltip" title="Mes / día / año | Fecha que se sube el documento"
                                            id="example-date-input" name="uploaded_date" required />
-                                    <small class="form-text text-muted">Mes / día / año | Fecha que se sube el documento</small>
+                                    @*<small class="form-text text-muted">Mes / día / año | Fecha que se sube el documento</small>*@
                                 </div>
                             </div>
                             <div class="form-divider"></div>
@@ -187,7 +188,7 @@
                                 </div>
                             </div>
                             <a href=""><button type="submit" class="btn btn-primary waves-effect waves-light">Guardar</button></a>
-                            <a href=""><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
+                            <a href="@Url.Action("listado", "documentos", new { area = "coadmin" })"><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
                         </div>
                     }
                 </div>
@@ -196,7 +197,7 @@
         <!-- back button -->
         <div class="row pb-4">
             <div class="col-md-6">
-                <a href="javascript:history.back()"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
+                <a href="@Url.Action("listado", "documentos", new { area = "coadmin" })"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
             </div>
         </div>
         <!-- end back button -->
