--- a/WebApplication1/Areas/coadmin/Views/comunicaciones/agregarcomentario.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/comunicaciones/agregarcomentario.cshtml
@@ -20,6 +20,8 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
+                            <li class="breadcrumb-item"><a href="@Url.Action("blog", "comunicaciones", new { area = "coadmin" })" class="text-success">Blog general</a></li>
+                            <li class="breadcrumb-item"><a href="@Url.Action("verblog", "comunicaciones", new { area = "coadmin", blogID = Model.blogID })" class="text-success">Ver blog</a></li>
                             <li class="breadcrumb-item active">Agregar comentario</li>
                         </ul>
                     </div>
@@ -30,7 +32,7 @@
         <!-- back button -->
         <div class="row pb-4">
             <div class="col-md-6">
-                <a href="javascript:history.back()"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
+                <a href="@Url.Action("verblog", "comunicaciones", new { area = "coadmin", blogID = Model.blogID })"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
             </div>
         </div>
         <!-- end back button -->
@@ -63,7 +65,7 @@
                             </div>
                             <div class="form-divider"></div>
                             <a href=""><button type="submit" class="btn btn-primary waves-effect waves-light">Agregar Comentario</button></a>
-                            <a href="@Url.Action("blog", "comunicaciones", new { area="coadmin" })"><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
+                            <a href="@Url.Action("verblog", "comunicaciones", new { area = "coadmin", blogID = Model.blogID })"><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
                         </div>
                     }
                 </div>
@@ -72,7 +74,7 @@
         <!-- back button -->
         <div class="row pb-4">
             <div class="col-md-6">
-                <a href="javascript:history.back()"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
+                <a href="@Url.Action("verblog", "comunicaciones", new { area = "coadmin", blogID = Model.blogID })"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
             </div>
         </div>
         <!-- end back button -->
