--- a/WebApplication1/Areas/coadmin/Views/cuotas/editar.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/cuotas/editar.cshtml
@@ -18,6 +18,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
+                            <li class="breadcrumb-item"><a href="@Url.Action("listado", "cuotas", new { area = "coadmin" })" class="text-success">Listado de cuotas</a></li>
                             <li class="breadcrumb-item active">Editar cuota</li>
                         </ul>
                     </div>
@@ -28,7 +29,7 @@
         <!-- back button -->
         <div class="row pb-4">
             <div class="col-md-6">
-                <a href="javascript:history.back()"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
+                <a href="@Url.Action("listado", "cuotas", new { area = "coadmin" })"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
             </div>
         </div>
         <!-- end back button -->
@@ -55,7 +56,7 @@
                                     <input maxlength="30" class="form-control soloTexto" type="text" value="@Model.feeName" name="fee_name" required
                                            placeholder="Cuota..." id="example-email-input"
                                            data-toggle="tooltip" title="Nombre de la cuota">
-                                    <small class="form-text text-muted">Nombre de la cuota</small>
+                                    @*<small class="form-text text-muted">Nombre de la cuota</small>*@
                                 </div>
                             </div>
                             <div class="form-divider"></div>
@@ -65,7 +66,7 @@
                                     <input class="form-control" maxlength="20" type="text" onkeypress="return filterFloat(event,this);" value="@Model.cost.ToString().Replace(',', '.')" name="cost" required
                                            placeholder="0.00" id="example-name1-input" 
                                            data-toggle="tooltip" title="Costo"/>
-                                    <small class="form-text text-muted">Costo</small>
+                                    @*<small class="form-text text-muted">Costo</small>*@
                                 </div>
                             </div>
                             <div class="form-divider"></div>
@@ -76,7 +77,7 @@
                                            placeholder="0.00" id="example-name1-input"
                                            data-toggle="tooltip" title="Cargo de impuestos"
                                            />
-                                    <small class="form-text text-muted">Cargo de impuestos</small>
+                                    @*<small class="form-text text-muted">Cargo de impuestos</small>*@
                                 </div>
                             </div>
                             <div class="form-divider"></div>
@@ -87,7 +88,7 @@
                                            placeholder="0.00" id="example-name1-input" data-toggle="tooltip"
                                            title="Pena"
                                            />
-                                    <small class="form-text text-muted">Pena</small>
+                                    @*<small class="form-text text-muted">Pena</small>*@
                                 </div>
                             </div>
                             <div class="form-divider"></div>
@@ -109,10 +110,10 @@
 
                                         }
                                     </select>
-                                    <small class="form-text text-muted">Cuenta de banco</small>
+                                    @*<small class="form-text text-muted">Cuenta de banco</small>*@
                                 </div>
                                 <div class="col-sm-3">
-                                    <a href="@Url.Action("agregarcuenta", "cuotas", new {  area = "coadmin" })">
+                                    <a href="@Url.Action("agregarcuenta", "cuotas", new {  area = "coadmin", nC = 2, editC =Model.feedId })">
                                         <button type="button" class="btn btn-primary waves-effect waves-light">Agregar cuenta</button>
                                     </a>
                                 </div>
@@ -125,11 +126,11 @@
                                            placeholder="XXX-XXXXXXXX-X-XX" id="example-lastname1-input"
                                            data-toggle="tooltip" title="Cuenta comercial"
                                            />
-                                    <small class="form-text text-muted">Cuenta comercial</small>
+                                    @*<small class="form-text text-muted">Cuenta comercial</small>*@
                                 </div>
                             </div>
                             <button type="submit" class="btn btn-primary waves-effect waves-light">Guardar</button>
-                            <a href="javascript:history.back()"> <button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button>
+                            <a href="@Url.Action("listado", "cuotas", new { area = "coadmin" })"> <button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button>
 </div>
                     }
                 </div>
@@ -138,7 +139,7 @@
         <!-- back button -->
         <div class="row pb-4">
             <div class="col-md-6">
-                <a href="javascript:history.back()"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
+                <a href="@Url.Action("listado", "cuotas", new { area = "coadmin" })"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
             </div>
         </div>
         <!-- end back button -->
