--- a/WebApplication1/Areas/coadmin/Views/documentos/ver.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/documentos/ver.cshtml
@@ -18,7 +18,8 @@
                     </div>
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
-                            <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i> Dashboard</a></li>
+                            <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
+                            <li class="breadcrumb-item"><a href="@Url.Action("listado", "documentos", new { area = "coadmin" })" class="text-success"> Documentos</a></li>
                             <li class="breadcrumb-item active">Ver documento</li>
                         </ul>
                     </div>
@@ -29,7 +30,7 @@
         <!-- back button -->
         <div class="row pb-4">
             <div class="col-md-6">
-                <a href="javascript:history.back()"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
+                <a href="@Url.Action("listado", "documentos", new { area = "coadmin" })"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
             </div>
         </div>
         <!-- end back button -->
@@ -47,7 +48,7 @@
                                 <input class="form-control" type="text" value="@Model.viewDocument.first_name"
                                        name="first_name" required data-toggle="tooltip" title="Nombre descriptivo del documento"
                                        placeholder="Documento 1" id="example-email-input" readonly />
-                                <small class="form-text text-muted">Nombre descriptivo del documento</small>
+                                @*<small class="form-text text-muted">Nombre descriptivo del documento</small>*@
                             </div>
                         </div>
                         <div class="form-divider"></div>
@@ -68,7 +69,7 @@
                                         }
                                     }
                                 </select>
-                                <small class="form-text text-muted">Categoría del documento</small>
+                                @*<small class="form-text text-muted">Categoría del documento</small>*@
                             </div>
                         </div>                                              
                        
@@ -98,7 +99,7 @@
                                 <input class="form-control" type="text" value="@Model.viewDocument.uploaded_by" name="uploaded_by"
                                        data-toggle="tooltip" title="Nombre de quien sube el documento" readonly
                                        placeholder="Daniel González" id="example-lastname1-input" required>
-                                <small class="form-text text-muted">Nombre de quien sube el documento</small>
+                                @*<small class="form-text text-muted">Nombre de quien sube el documento</small>*@
                             </div>
                         </div>
                         <div class="form-divider"></div>
@@ -108,7 +109,7 @@
                                 <input class="form-control" type="date" value="@Convert.ToDateTime(Model.viewDocument.uploaded_date).ToString("yyyy-MM-dd")"
                                        name="uploaded_date" data-toggle="tooltip" title="Mes / día / año | Fecha que se sube el documento" required
                                        id="example-date-input" readonly />
-                                <small class="form-text text-muted">Mes / día / año | Fecha que se sube el documento</small>
+                                @*<small class="form-text text-muted">Mes / día / año | Fecha que se sube el documento</small>*@
                             </div>
                         </div>
                         <div class="form-divider"></div>
@@ -155,7 +156,7 @@
         <!-- back button -->
         <div class="row pb-4">
             <div class="col-md-6">
-                <a href="javascript:history.back()"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
+                <a href="@Url.Action("listado", "documentos", new { area = "coadmin" })"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
             </div>
         </div>
         <!-- end back button -->
