--- a/WebApplication1/Areas/coadmin/Views/facilidades/editar.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/facilidades/editar.cshtml
@@ -29,6 +29,7 @@
                         <div class="float-right">
                             <ul class="breadcrumb float-md-right">
                                 <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
+                                <li class="breadcrumb-item"><a href="@Url.Action("disponibles", "facilidades", new { area ="coadmin" })" class="text-success"> Facilidades disponibles</a></li>
                                 <li class="breadcrumb-item active">Editar facilidad</li>
                             </ul>
                         </div>
@@ -39,7 +40,7 @@
             <!-- back button -->
             <div class="row pb-4">
                 <div class="col-md-6">
-                    <a href="javascript:history.back()"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
+                    <a href="@Url.Action("disponibles", "facilidades", new { area ="coadmin" })"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
                 </div>
             </div>
             <!-- end back button -->
@@ -69,17 +70,17 @@
                                         <input maxlength="30" class="form-control soloTexto" type="text" value="@Model.editFac.first_name" required
                                                data-toggle="tooltip" title="Nombre de la facilidad"
                                                placeholder="Nombre" id="example-email-input" name="first_name">
-                                        <small class="form-text text-muted">Nombre de la facilidad</small>
+                                        @*<small class="form-text text-muted">Nombre de la facilidad</small>*@
                                     </div>
                                 </div>
                                 <div class="form-divider"></div>
                                 <div class="form-group row">
                                     <label for="example-lastname1-input" class="col-sm-3 col-form-label">Descripción</label>
                                     <div class="col-sm-9">
-                                        <textarea required class="form-control" rows="3" name="description"
+                                        <textarea maxlength="90" required class="form-control" rows="3" name="description"
                                                   data-toggle="tooltip" title="Descripción de la facilidad"
                                                   placeholder="Descripción">@Model.editFac.description</textarea>
-                                        <small class="form-text text-muted">Descripción de la facilidad</small>
+                                        @*<small class="form-text text-muted">Descripción de la facilidad</small>*@
                                     </div>
                                 </div>
                                 <div class="form-divider"></div>
@@ -89,7 +90,7 @@
                                         <input class="form-control" type="time" value="@Model.editFac.start_time.ToString(@"hh\:mm")"
                                                data-toggle="tooltip" title="Hora de inicio de disponibilidad"
                                                id="example-time-input" name="start_time" required />
-                                        <small class="form-text text-muted">Hora de inicio de disponibilidad</small>
+                                        @*<small class="form-text text-muted">Hora de inicio de disponibilidad</small>*@
                                     </div>
                                 </div>
                                 <div class="form-divider"></div>
@@ -99,7 +100,7 @@
                                         <input class="form-control" type="time" value="@Model.editFac.end_time.ToString(@"hh\:mm")"
                                                data-toggle="tooltip" title="Hora de fin de disponibilidad"
                                                id="example-time-input" name="end_time" required />
-                                        <small class="form-text text-muted">Hora de fin de disponibilidad</small>
+                                        @*<small class="form-text text-muted">Hora de fin de disponibilidad</small>*@
                                     </div>
                                 </div>
                                 <div class="form-divider"></div>
@@ -121,7 +122,7 @@
 
                                             }
                                         </select>
-                                        <small class="form-text text-muted">Duración de reservaciones en horas</small>
+                                        @*<small class="form-text text-muted">Duración de reservaciones en horas</small>*@
                                     </div>
                                 </div>
                                 <div class="form-divider"></div>
@@ -136,7 +137,7 @@
                                                    data-toggle="tooltip" title="Costo por reservación"
                                                    value="@Model.editFac.cost_reservation.ToString().Replace(',', '.')" required />
                                         </div>
-                                        <small class="form-text text-muted">Pago por la reserva de la facilidad</small>
+                                        @*<small class="form-text text-muted">Pago por la reserva de la facilidad</small>*@
                                     </div>
                                 </div>
                                 <div class="form-divider"></div>
@@ -169,14 +170,13 @@
                                                     </button>
                                                 </a>
                                             }
-
                                             <small class="form-text text-muted">Descargar el reglamento de la facilidad</small>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="form-divider"></div>
                                 <a href=""><button type="submit" class="btn btn-primary waves-effect waves-light">Guardar</button></a>
-                                <a href="javascript:history.back()"><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
+                                <a href="@Url.Action("disponibles", "facilidades", new { area ="coadmin" })"><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
                             </div>
                         }
                     </div>
@@ -185,7 +185,7 @@
             <!-- back button -->
             <div class="row pb-4">
                 <div class="col-md-6">
-                    <a href="javascript:history.back()"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
+                    <a href="@Url.Action("disponibles", "facilidades", new { area ="coadmin" })"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
                 </div>
             </div>
             <!-- end back button -->
