--- a/WebApplication1/Areas/coadmin/Views/facilidades/reservartwo.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/facilidades/reservartwo.cshtml
@@ -1,6 +1,7 @@
 ﻿
 @{
-    ViewBag.Title = "Reservar facilidad - Brokolee Software";
+    ViewBag.Title = "Reservar";
+    Page.Title = "Reservar facilidad - Brokolee Software";
 }
 
 <div class="page-content-wrapper">
@@ -18,6 +19,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
+                            <li class="breadcrumb-item"><a href="@Url.Action("disponibles", "facilidades", new { area ="coadmin" })" class="text-success"> Facilidades disponibles</a></li>
                             <li class="breadcrumb-item active">Reservar facilidad</li>
                         </ul>
                     </div>
@@ -28,7 +30,7 @@
         <!-- back button -->
         <div class="row pb-4">
             <div class="col-md-6">
-                <a href="javascript:history.back()"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
+                <a href="@Url.Action("disponibles", "facilidades", new { area ="coadmin" })"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
             </div>
         </div>
         <!-- end back button -->
@@ -48,7 +50,7 @@
                     {
                         @Html.AntiForgeryToken()
                         <div class="card-body">
-                            <h5 class="d-inline-block">Información del titular</h5>
+                            <h5 class="d-inline-block">Información de la facilidad</h5>
                             <div class="form-divider"></div>
                             <div class="form-group row">
                                 <label for="example-email-input" class="col-sm-3 col-form-label">Nombre</label>
@@ -105,7 +107,7 @@
                             </div>
                             <div class="form-divider"></div>
                             <a href=""><button type="submit" class="btn btn-primary waves-effect waves-light">Guardar</button></a>
-                            <a href=""><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
+                            <a href="@Url.Action("disponibles", "facilidades", new { area ="coadmin" })"><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
                         </div>
                     }
                 </div>
@@ -114,7 +116,7 @@
         <!-- back button -->
         <div class="row pb-4">
             <div class="col-md-6">
-                <a href="javascript:history.back()"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
+                <a href="@Url.Action("disponibles", "facilidades", new { area ="coadmin" })"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
             </div>
         </div>
         <!-- end back button -->
