--- a/WebApplication1/Areas/coadmin/Views/tareas/editar.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/tareas/editar.cshtml
@@ -19,6 +19,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i>Panel de control</a></li>
+                            <li class="breadcrumb-item"><a href="@Url.Action("listado", "tareas", new { area ="coadmin" })" class="text-success"> Listado de tareas</a></li>
                             <li class="breadcrumb-item active">Editar tarea</li>
                         </ul>
                     </div>
@@ -26,6 +27,11 @@
             </div>
         </div>
         <!-- end page title end breadcrumb -->
+        <div class="row pb-4">
+            <div class="col-md-6">
+                <a href="@Url.Action("listado", "tareas", new { area ="coadmin" })"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
+            </div>
+        </div>
         <div class="row">
 
             <div class="col-12">
@@ -34,14 +40,14 @@
                         new { id = "edittaskForm", @class = "", area = "coadmin" }))
                     {
                         @Html.AntiForgeryToken()
-                        <input type="hidden" name="taskID" value="@Model.editTask.id"/>
+                        <input type="hidden" name="taskID" value="@Model.editTask.id" />
                         <div class="card-body">
-                            <h5 class="d-inline-block">Editar tarea</h5>
+                            <h5 class="d-inline-block">Información de la tarea</h5>
                             <div class="form-divider"></div>
                             <div class="form-group row">
                                 <label for="example-email-input" class="col-sm-3 col-form-label">Nombre</label>
                                 <div class="col-sm-9">
-                                    <input maxlength="30" class="form-control" type="text" 
+                                    <input maxlength="30" class="form-control" type="text"
                                            value="@Model.editTask.task_name" placeholder="Nombre"
                                            data-toggle="tooltip" title="Nombre de la tarea"
                                            id="example-email-input" name="task_name" required>
@@ -52,7 +58,7 @@
                             <div class="form-group row">
                                 <label for="example-lastname1-input" class="col-sm-3 col-form-label">Descripción</label>
                                 <div class="col-sm-9">
-                                    <textarea required class="form-control" rows="3"  name="description"
+                                    <textarea required maxlength="90" class="form-control" rows="3" name="description"
                                               data-toggle="tooltip" title="Nombre de la tarea"
                                               placeholder="Descripción">@Model.editTask.description</textarea>
                                     @*<small class="form-text text-muted">Descripción de la tarea</small>*@
@@ -64,7 +70,7 @@
                                 <div class="col-sm-9">
                                     <input maxlength="30" class="form-control" type="text" name="responsable" required
                                            data-toggle="tooltip" title="Nombre de la persona responsable"
-                                           value="@Model.editTask.responsable" placeholder="Responsable" 
+                                           value="@Model.editTask.responsable" placeholder="Responsable"
                                            id="example-lastname1-input">
                                     @*<small class="form-text text-muted">Nombre de la persona responsable</small>*@
                                 </div>
@@ -75,7 +81,7 @@
                                 <div class="col-sm-9">
                                     <input autocomplete="off" class="form-control" type="date" required
                                            data-toggle="tooltip" title="Mes / día / año | Fecha de registro de la tarea"
-                                           value="@Convert.ToDateTime(Model.editTask.task_date).ToString("yyyy-MM-dd")" 
+                                           value="@Convert.ToDateTime(Model.editTask.task_date).ToString("yyyy-MM-dd")"
                                            id="example-date-input" name="task_date" />
                                     @*<small class="form-text text-muted">Mes / día / año | Fecha de registro de la tarea</small>*@
                                 </div>
@@ -85,7 +91,7 @@
                             <div class="form-group row">
                                 <label for="example-date-input1" class="col-sm-3 col-form-label">Fecha</label>
                                 <div class="col-sm-9">
-                                    <input autocomplete="off" class="form-control" type="date" 
+                                    <input autocomplete="off" class="form-control" type="date"
                                            data-toggle="tooltip" title="Mes / día / año | Fecha estimada para terminar la tarea"
                                            value="@Convert.ToDateTime(Model.editTask.estimated_date).ToString("yyyy-MM-dd")"
                                            id="example-date-input1" name="estimated_date" required>
@@ -178,8 +184,8 @@
                             </div>
                             <div class="form-divider"></div>
                             <a href=""><button type="submit" class="btn btn-primary waves-effect waves-light">Guardar</button></a>
-                            <a href="javascript:history.back()"><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
-</div>
+                            <a href="@Url.Action("listado", "tareas", new { area ="coadmin" })"><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
+                        </div>
                     }
                 </div>
             </div>
@@ -187,7 +193,7 @@
         <!-- back button -->
         <div class="row pb-4">
             <div class="col-md-6">
-                <a href="javascript:history.back()"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
+                <a href="@Url.Action("listado", "tareas", new { area ="coadmin" })"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
             </div>
         </div>
         <!-- end back button -->
